# Machine-Learning-em-Haskell

Python Benchmark/: benchmarks.ipynb
Python Benchmark/outputs/: X_test.csv
leitura-csv/: leitura-csv.cabal
leitura-csv/.stack-work/: stack.sqlite3
leitura-csv/data/: .~lock.breast-cancer.csv#
leitura-csv/src/: Main.hs
projeto-ml/: CHANGELOG.md  README.md  projeto-ml.cabal
projeto-ml/.stack-work/: stack.sqlite3
projeto-ml/.stack-work/ghci/9c5f2e9e/: cabal_macros.h
projeto-ml/.stack-work/ghci/d52ed757/: cabal_macros.h
projeto-ml/.stack-work/ghci/dccd8e55/: cabal_macros.h
projeto-ml/.stack-work/ghci/e3a2e977/: cabal_macros.h
projeto-ml/data/: X_train.csv  y_test.csv  y_train.csv
projeto-ml/src/: DecisionTree.hs  KNN.hs  Main.hs  NaiveBayes.hs  Tools.hs
